--- a/src/app/vehicles/vehicle-item/vehicle-item.component.html
+++ b/src/app/vehicles/vehicle-item/vehicle-item.component.html
@@ -1,4 +1,67 @@
 <div class="container">
+  <div *ngFor="let vehicleEl of vehicleList;">
+      <div class="col-sm-3">
+          <div class="card">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval=false>              
+                <div class="carousel-inner" >
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="http://placekitten.com/362/200" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="http://placekitten.com/362/200" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="http://placekitten.com/362/200" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+            </div>
+  
+            <div class="card-body">
+                <div class="row">
+                    <div class="col font-weight-bold">
+                      <a data-toggle="modal" data-target="#exampleModalCenter" style="cursor:pointer;">Car name</a>
+                    </div>
+                    <div class="col text-right font-weight-bold"> 
+                      $100,000
+                    </div>                  
+                </div>
+                <div class="row">
+                  <div id="kmOdometer" style="min-width: 50px; max-width: 120px;"> 
+                    <div style="min-width: 30px;"><img src="assets\images\car-speedometer.png" alt="" style="width: 13%; height: 13%"><span> 100,000km</span></div>              
+                  </div>
+                  <div id="bodyType" style="min-width: 50px; max-width: 120px;">
+                    <div><img src="assets\images\automobile.png" alt="" style="width: 13%; height: 13%"><span> Hatch</span></div>              
+                  </div>
+                  <div id="transmissionType" style="min-width: 50px; max-width: 120px;"> 
+                    <div><img src="assets\images\driving-gear-controls.png" alt="" style="width: 13%; height: 13%"><span> Manual</span></div>              
+                  </div>
+                  <div id="engineType" style="min-width: 50px; max-width: 120px;">
+                    <div><img src="assets\images\motor.png" alt="" style="width: 13%; height: 13%"><span> Gasoline</span></div>              
+                  </div>
+                  <div id="locationDiv" style="min-width: 50px; max-width: 180px;">
+                      <div><img src="assets\images\location.png" alt="" style="width: 8%; height: 8%"><span> Melbourne, Victoria</span></div>
+                  </div>
+                </div>        
+              </div>
+            </div>
+      </div>
+  </div>
+
+
+
+
+  <!--
+    Previous Code
+
+  -->
   <div class="row">
     <div class="col-sm-3">
         <div class="card">
